--- a/src/MyBlog/Views/Home/Index.cshtml
+++ b/src/MyBlog/Views/Home/Index.cshtml
@@ -7,9 +7,8 @@
     <meta name="description" content="Как програмировать на asp.net 5">
     <meta name="author" content="Алексей Белов">
     <title>Персональный блог про программирование на asp.net 5</title>
-    <script src="lib/bootstrap/dist/css/bootstrap.min.css"></script>
-    <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
-    <link href="lib/main.css" rel="stylesheet">
+    <link href="~/main.css" rel="stylesheet">
+    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -17,114 +16,28 @@
     <![endif]-->
 </head>
 <body>
-
-    <div class="blog-head">
-        <div class="container">
-            <nav class="blog-nav">
-                <a class="blog-nav-item active" href="#">На главную</a>
-            </nav>
-        </div>
-    </div>
-
+<div class="main-header">
+    <div class="top-header"></div>
     <div class="container">
-
-        <div class="blog-header">
-            <h1 class="blog-title">Мой Персональный блог про программирование на ASP.NET 5</h1>
-        </div>
-
         <div class="row">
-
-            <div class="col-sm-8 blog-main">
-
-                <div class='blog-post'>
-                    <h2 class='title'>
-                        <a href="#">Setting up your development environment</a>
-                    </h2>
-                    <p class='metadata'>
-                        <span>June 18th, 2015</span>
-                        by <a class="author" href='#'>Jess</a>
-                    </p>
-                    <section class="body">
-                        <p>
-                            There are a few things you'll need installed and configured
-                            on your machine before you're able to work with ASP.NET 5:
-
-                            <ul>
-                                <li>Windows 7 or Windows Server 2008 R2 and above</li>
-                                <li>Visual Studio 2015 (Community Edition or above)</li>
-                                <li>Web Essentials Visual Studio extension</li>
-                            </ul>
-                        </p>
-                        <p>
-                            Once you have those things installed, come on back for the
-                            next blog post and we'll start creating your new project!
-                        </p>
-                    </section>
-                </div>
-                
-
-                <div class='blog-post'>
-                    <h2 class='title'>
-                        <a href="#">Welcome to my blog!</a>
-                    </h2>
-                    <p class='metadata'>
-                        <span>June 16th, 2015</span>
-                        by <a class="author" href='#'>Jess</a>
-                    </p>
-                    <section class="body">
-                        <p>Hello, and welcome to my blog!</p>
-                        <p>
-                            I have spent a lot of time curating some of the best information
-                            available on building and maintaining ASP.NET 5 web applications
-                            and I hope you find it useful!
-                        </p>
-                    </section>
-                </div>
-                
-
-                <nav class="hide">
-                    <ul class="pager">
-                        <li><a href="#">Previous</a></li>
-                        <li><a href="#">Next</a></li>
-                    </ul>
-                </nav>
-
+            <div class="col-sm-4">
+                <p><span class="name">Alexej Belov</span></p>
+                <p><span class="develop">developer asp.net 5</span></p>
+                <input type="checkbox" checked="checked"/>
+                <label>HELLO</label>
             </div>
-            
-
-            <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
-                <div class="sidebar-module sidebar-module-inset">
-                    <h4>About</h4>
-                    <p>
-                        This blog is meant for learning, and that's just what we'll do.
-                        One of these days, this blog is gonna learn all over you.
-                    </p>
-                </div>
-                <div class="sidebar-module">
-                    <h4>Archives</h4>
-                    <ol class="list-unstyled">
-                        <li><a href="#">March 2014</a></li>
-                        <li><a href="#">February 2014</a></li>
-                        <li><a href="#">January 2014</a></li>
-                        <li><a href="#">December 2013</a></li>
-                        <li><a href="#">November 2013</a></li>
-                        <li><a href="#">October 2013</a></li>
-                        <li><a href="#">September 2013</a></li>
-                        <li><a href="#">August 2013</a></li>
-                        <li><a href="#">July 2013</a></li>
-                        <li><a href="#">June 2013</a></li>
-                        <li><a href="#">May 2013</a></li>
-                        <li><a href="#">April 2013</a></li>
-                    </ol>
-                </div>
+            <div class="col-sm-offset-4 col-sm-4">
+                <ul class="nav nav-pills">
+                    <li>Главная</li>
+                    <li>Блог</li>
+                    <li>Контакты</li>
+                </ul>
             </div>
-           
-
         </div>
-
     </div>
-    <footer class="blog-footer">
-        <p>Блог построен на <a href="http://getbootstrap.com">Bootstrap</a> автор Alexej Belov.</p>
-    </footer>
+    <div class="down-header"></div>
+</div>
+    
+    
 </body>
 </html>
