--- a/src/MyBlog/Views/Home/Index.cshtml
+++ b/src/MyBlog/Views/Home/Index.cshtml
@@ -7,9 +7,9 @@
     <meta name="description" content="Как програмировать на asp.net 5">
     <meta name="author" content="Алексей Белов">
     <title>Персональный блог про программирование на asp.net 5</title>
-    <script src="lib/bootstrap/dist/css/bootstrap.min.css"></script>
-    <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
-    <link href="lib/main.css" rel="stylesheet">
+    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <link href="~/main.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
